--- a/requirements.txt
+++ b/requirements.txt
@@ -1,224 +1,3 @@
-absl-py==2.0.0
-alembic==1.12.1
-aniso8601==9.0.1
-apispec==5.2.2
-apispec-webframeworks==0.5.2
-appnope==0.1.3
-arrow==1.3.0
-asttokens==2.4.0
-astunparse==1.6.3
-attrs==24.2.0
-Automat==22.10.0
-backcall==0.2.0
-bidict==0.22.1
-binaryornot==0.4.4
-blinker==1.7.0
-cachetools==5.3.2
-certifi==2024.7.4
-chardet==5.2.0
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpickle==3.0.0
-comm==0.1.4
-constantly==23.10.4
-contourpy==1.1.1
-cookiecutter==2.1.1
-cycler==0.12.1
-dask==2023.10.1
-debugpy==1.8.0
-decorator==4.4.2
-deepdiff==6.2.3
-distributed==2023.10.1
-dnspython==2.4.2
-et-xmlfile==1.1.0
-executing==2.0.0
-fastjsonschema==2.18.1
-filelock==3.13.1
-Flask==3.0.0
-Flask-Cors==4.0.0
-flask-marshmallow==0.14.0
-Flask-Migrate==3.1.0
-Flask-RESTful==0.3.10
-Flask-SocketIO==5.3.6
-Flask-SQLAlchemy==3.1.1
-flatbuffers==23.5.26
-fonttools==4.43.1
-fsspec==2023.10.0
-gast==0.5.4
-gensim==4.3.2
-gevent==23.9.1
-gevent-websocket==0.10.1
-gitignore-parser==0.1.9
-google-api-core==2.12.0
-google-api-python-client==2.106.0
-google-auth==2.23.4
-google-auth-httplib2==0.1.1
-google-auth-oauthlib==1.1.0
-google-pasta==0.2.0
-googleapis-common-protos==1.61.0
-greenlet==3.0.1
-grpcio==1.59.3
-gTTS==2.4.0
-h11==0.14.0
-h5py==3.10.0
-httplib2==0.22.0
-huggingface-hub==0.19.4
-hyperlink==21.0.0
-idna==3.7
-imageio==2.31.5
-imageio-ffmpeg==0.4.9
-imbalanced-learn==0.11.0
-imblearn==0.0
-importlib-metadata==6.8.0
-incremental==22.10.0
-ipykernel==6.25.2
-ipython==8.16.1
-itsdangerous==2.1.2
-jedi==0.19.1
-Jinja2==3.1.2
-jinja2-time==0.2.0
-joblib==1.3.2
-jsonschema==4.19.2
-jsonschema-specifications==2023.7.1
-jupyter_client==8.4.0
-jupyter_core==5.4.0
-keras==2.15.0
-kiwisolver==1.4.5
-kthread==0.2.3
-langdetect==1.0.9
-libclang==16.0.6
-locket==1.0.0
-Mako==1.2.4
-Markdown==3.5.1
-MarkupSafe==2.1.3
-marshmallow==3.20.1
-marshmallow-sqlalchemy==0.28.1
-matplotlib==3.8.0
-matplotlib-inline==0.1.6
-ml-dtypes==0.2.0
-mlxtend==0.23.0
-modin==0.25.0
-moviepy==1.0.3
-mpmath==1.3.0
-msgpack==1.0.7
-nbformat==5.9.2
-nest-asyncio==1.5.8
-networkx==2.8.8
-nltk==3.8.1
-numpy==1.26.1
-oauth2client==4.1.3
-oauthlib==3.2.2
-openpyxl==3.1.2
-opt-einsum==3.3.0
-ordered-set==4.1.0
-orjson==3.9.10
-outcome==1.3.0.post0
-packaging==24.1
-pandas==2.1.1
-parso==0.8.3
-partd==1.4.1
-passlib==1.7.4
-patsy==0.5.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==10.1.0
-platformdirs==3.11.0
-plotly==5.18.0
-plotly-express==0.4.1
-proglog==0.1.10
-progressbar2==4.2.0
-prompt-toolkit==3.0.39
-protobuf==4.23.4
-psutil==5.9.6
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==10.0.1
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pygame==2.5.2
-Pygments==2.16.1
-pymongo==4.6.0
-pyparsing==3.1.1
-pyser==0.1.5
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-python-engineio==4.8.0
-python-slugify==8.0.1
-python-socketio==5.10.0
-python-utils==3.8.1
-pytz==2022.1
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0.1
-pyzmq==25.1.1
-referencing==0.30.2
-regex==2023.10.3
-requests==2.32.3
-requests-oauthlib==1.3.1
-rpds-py==0.10.6
-rsa==4.9
-safetensors==0.4.1
-scikit-learn==1.3.1
-scipy==1.11.3
-seaborn==0.13.0
 selenium==4.23.1
-simple-websocket==0.10.1
-simple-youtube-api==0.2.8
-six==1.16.0
-smart-open==6.4.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-SQLAlchemy==2.0.23
-stack-data==0.6.3
-statsmodels==0.14.0
-sympy==1.12
-tabulate==0.9.0
-taipy==3.0.0
-taipy-config==3.0.0
-taipy-core==3.0.0
-taipy-gui==3.0.0
-taipy-rest==3.0.0
-taipy-templates==3.0.0
-tblib==3.0.0
-tenacity==8.2.3
-tensorboard==2.15.1
-tensorboard-data-server==0.7.2
-tensorflow==2.15.0
-tensorflow-estimator==2.15.0
-tensorflow-io-gcs-filesystem==0.34.0
-tensorflow-macos==2.15.0
-termcolor==2.3.0
-text-unidecode==1.3
-textblob==0.17.1
-threadpoolctl==3.2.0
-tokenizers==0.15.0
-toml==0.10.2
-toolz==0.12.0
-torch==2.3.0
-torchvision==0.18.0
-tornado==6.3.3
-tqdm==4.66.1
-traitlets==5.11.2
-transformers==4.35.2
-trio==0.26.1
-trio-websocket==0.11.1
-Twisted==23.10.0
-types-python-dateutil==2.8.19.14
-typing_extensions==4.12.2
-tzdata==2023.3
-tzlocal==4.3.1
-uritemplate==4.1.1
-urllib3==2.2.2
 vaderSentiment==3.3.2
-wcwidth==0.2.8
-webdriver-manager==4.0.2
-websocket-client==1.8.0
-Werkzeug==3.0.1
-wrapt==1.14.1
-wsproto==1.2.0
-xgboost==2.0.2
-xlrd==2.0.1
-zict==3.0.0
-zipp==3.17.0
-zope.event==5.0
-zope.interface==6.1
+webdriver_manager==4.0.2
